prototypes/v1/tests/elab/errors/unification/non_local_fun_app.pion
def error: fun(A : _) -> (A -> _) -> A
  = fun(A) => fun(a) => a(_);
